--- a/styles/styles.css
+++ b/styles/styles.css
@@ -165,28 +165,31 @@ body {
 
 @media screen and (max-width: 768px) {
     .container {
-        grid-template-columns: 1fr;
+        display: block;
+        background-image: none;
     }
 
+    .container__imagem{
+        width: 50vw;
+    }
     .container__caixa {
-        margin: 0 2em;
+        margin: 2em 2em;
     }
 
     .secundario {
-        margin: 0 2em;
+        margin: 0;
+        text-align: center;
     }
 
     .secundario__imagem {
-        width: 100%;
+        width: 50vw;
     }
-
-    .container__botao {
-        width: 100%;
-        margin-bottom: 1em;
-    }
-
     .dispositivos__lista {
-        flex-direction: column;
+        display: block;
+        align-items: center;
+    }
+    .rodape__lista {
+        display: block;
         align-items: center;
     }
     
